@@ -1,2 +1,28 @@
 # Sudoku
 javafxを用いて開発した数独アプリ
+
+# Demo
+
+
+# Features
+* ドロップダウンリストから数字を選択して回答する形式の数独です
+
+# Requirement
+* jdk 14.0.2
+* javafx sdk 11.0.2
+
+# Usage
+* コンパイルコマンド
+```bash
+javac -p "保存したjavafxのlibファイルへのpath" --add-modules javafx.controls -encoding UTF-8 Sudoku.java
+```
+* 実行コマンド
+```bash
+java -p "保存したjavafxのlibファイルへのpath" --add-modules javafx.controls Sudoku
+```
+
+# Note
+* 問題(input.txt)と解答(input_answer.txt)のファイルを同じディレクトリに格納してください
+
+# Author
+* https://github.com/kokugosogo
